<resources>
    <string name="app_name">MemoryGame</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="next"><u>Next</u></string>
    <string name="finish"><u>Finish</u></string>
    <string name="new_game">New Game</string>
    <string name="save_score">Save Score</string>
    <string name="about">About</string>
    <string name="game">Game</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="_defaultErr" translatable="false">0</string>
    <string name="errorsInfo">Errors = </string>
    <string name="dateInfo" translatable="false"> mm, dd, yyyy</string>
    <string name="timeInfo">Time = </string>
    <string name="defaultErrors" translatable="false">0</string>
    <string name="defaultTime" translatable="false">00.00.05</string>
    <string name="playerName">Player1</string>
    <string name="position" translatable="false">1</string>
    <string name="player_name">Player Name</string>
    <string name="aboutUs">ABOUT US</string>
    <string name="mp2021">MOBILE PROGRAMMING 20/21</string>
    <string name="ciferri_simone" translatable="false">Ciferri Simone</string>
    <string name="caporro_giulio" translatable="false">Caporro Giulio</string>
    <string name="gitHubLink" translatable="false">https://github.com/SimoneCiferri/MemoryGame</string>
    <string name="tvAboutText">Hello dear, are you enjoying the game? I hope so :D! We are two computer engineering students of the Mobile Programming course taught by our beloved professor Massimo Regoli         and we were pleased to make our work open to the public so that it can be improved in the future. If you are interested this is the link:</string>
    <string name="match_the_cards_tutorial">Match the cards!</string>
    <string name="save_your_score_tutorial">Save Your Score!</string>
    <string name="get_the_code_tutorial">Get the code for free!</string>
    <string name="arrowtolink" translatable="false">ArrowToLink</string>
    <string name="githublogo" translatable="false">GitHub Logo</string>
    <string name="cup">cup</string>
    <string name="scoreShow">Score = </string>
    <string name="default_score" translatable="false">10000</string>
    <string name="iq" translatable="false">Iq</string>
    <string name="scoreboard_allcaps">SCOREBOARD</string>
    <string name="follow_us">FOLLOW US</string>
    <string name="facebookLinkCiferri" translatable="false">https://www.facebook.com/simone.ciferri.52</string>
    <string name="facebookLinkCaporro" translatable="false">https://www.facebook.com/giulio.caporro.7</string>
    <string name="instaLinkCiferri" translatable="false">https://www.instagram.com/simone_ciferri/</string>
    <string name="instaLinkCaporro" translatable="false">https://www.instagram.com/giuliocaporro/</string>
    <string name="gitLinkCiferri" translatable="false">https://github.com/SimoneCiferri</string>
    <string name="gitLinkCaporro" translatable="false">https://github.com/giuliocapo</string>
    <string name="scoreSaved">Score Saved!</string>
    <string name="fillAllFieldsWarning">Please fill out all fields!</string>
    <string name="playerNameTooLong">Player name too long!!</string>
    <string name="no_scores_saved">NO SCORES SAVED!!!</string>
    <string name="invalid_move">invalid move!</string>
    <string name="contact_us">CONTACT US</string>
    <string name="email_intent_arg" translatable="false">mailto: memorygamefeedback@gmail.com</string>
    <string name="feedback">Feedback</string>
    <string name="memorygamefeedback_gmail_com" translatable="false">memorygamefeedback@gmail.com</string>
    <string name="gmail_icon" translatable="false">gmailicon</string>
    <string name="facebook_logo" translatable="false">facebookLogo</string>
    <string name="instagram_logo" translatable="false">instagramLogo</string>
    <string name="tutorial_background" translatable="false">tutorialBackground</string>
    <string name="memory_icon" translatable="false">memoryIcon</string>
    <string name="star" translatable="false">star</string>
    <string name="audio_mode" translatable="false">audioMode</string>
    <string name="card" translatable="false">card</string>

</resources>